tests/compile_fail/invalid_selector_list_empty.rs
use surgeist_style::SelectorList;

fn main() {
    let _list = SelectorList {
        selectors: Vec::new(),
    };
}
