tests/compile_fail/invalid_selector_list_empty.stderr
error[E0451]: field `selectors` of struct `surgeist_style::SelectorList` is private
 --> tests/compile_fail/invalid_selector_list_empty.rs:5:9
  |
4 |     let _list = SelectorList {
  |                 ------------ in this type
5 |         selectors: Vec::new(),
  |         ^^^^^^^^^ private field
